SERVER-52950 Avoid calculating oplog stones when recoverFromOplogAsStandalone=true as the OplogCapMaintainerThread is not running

(cherry picked from commit 3be0c64532e121780dd11788fa3db4a9089b008c)