src/mongo/db/storage/oplog_cap_maintainer_thread.cpp
@@ -93,6 +93,7 @@ bool OplogCapMaintainerThread::_deleteExcessDocuments() {
 }
 
 void OplogCapMaintainerThread::run() {
+    LOGV2_DEBUG(5295000, 1, "Oplog cap maintainer thread started", "threadName"_attr = _name);
     ThreadClient tc(_name, getGlobalServiceContext());
 
     while (!globalInShutdownDeprecated()) {
